--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-class-names": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -30,5 +31,8 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
