--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "axios": "^0.26.1",
     "embla-carousel-autoplay": "^8.1.5",
     "embla-carousel-class-names": "^8.1.5",
     "embla-carousel-react": "^8.1.5",
+    "framer-motion": "^11.2.12",
+    "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.8",
     "next": "13.5.6",
     "react": "^18",
